Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-39389

Resizing the QQuickWidget in the example results in OpenGL errors

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.3.1
    • 5.3.0
    • Quick: SceneGraph
    • None
    • a9019adc013b711df6a9e2831b08306ea5591f31

      Resize the MDI subwindow in the QQuickWindow example. The following is shown: (GLX, Mesa, radeon)

      [opengl/qopenglframebufferobject.cpp line 500] OpenGL Error: 1282
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lagocs Laszlo Agocs
            lagocs Laszlo Agocs
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes